# yoko

./: Cargo.toml  README.md  recover.json
api/: Cargo.toml
api/src/: consts.rs  error.rs  instruction.rs  lib.rs  sdk.rs
api/src/state/: fund.rs  mod.rs  payout.rs  position.rs
local-test-scripts/: Cargo.toml  depositor.json
local-test-scripts/src/: main.rs
program/: Cargo.toml
program/src/: claim_payout.rs  create_fund.rs  create_fund_token_account.rs  create_payout.rs  create_position.rs  deposit.rs  lib.rs  swap.rs
server/: Cargo.toml
server/src/: constants.rs  main.rs
server/src/endpoints/: get_claim_payout_msg.rs  get_create_fund_msg.rs  get_create_payout_msg.rs  get_deposit_msg.rs  get_fund.rs  get_swap_msg.rs  mod.rs
server/src/utils/: swap.rs
