[package]
name = "local-test-scripts"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
bytemuck.workspace = true
steel.workspace = true
yoko_program-api.workspace = true
spl-token.workspace = true
solana-sdk = "1.18"
solana-client = "1.18"
solana-address-lookup-table-program = "1.18"
spl-associated-token-account = "3.0.4"

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.42.0"
base64 = "0.13.0"
